# gabarit

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  TODO.md  index.html  mkdocs.yaml  objects.inv  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: api_build_tests.yaml  api_build_tests_310.yaml  api_gabarit_nlp_test.yaml  api_gabarit_nlp_test_310.yaml  docs.yaml  frameworks_publish.yaml  gabarit_linter.yaml  gabarit_publish.yaml  nlp_build_tests.yaml  nlp_build_tests_310.yaml  nlp_build_tests_manual.yaml  nlp_linter.yaml  nlp_linter_310.yaml  nlp_tests.yaml  nlp_wheel.yaml  nlp_wheel_310.yaml  num_build_tests.yaml  num_build_tests_310.yaml  num_build_tests_manual.yaml  num_linter.yaml  num_linter_310.yaml  num_tests.yaml  num_wheel.yaml  num_wheel_310.yaml  vision_build_tests.yaml  vision_build_tests_310.yaml  vision_build_tests_manual.yaml  vision_linter.yaml  vision_linter_310.yaml  vision_tests.yaml  vision_wheel.yaml  vision_wheel_310.yaml  vulnerability copy.yaml  vulnerability.yaml  vulnerability_310.yaml
docs/: .gitignore  gen_ref_pages.py  index.md
docs/frameworks/: API.md  NLP.md  NUM.md  VISION.md  index.md
frameworks/: index.html
frameworks/API/: index.html
frameworks/NLP/: index.html
frameworks/NUM/: index.html
frameworks/VISION/: index.html
gabarit/template_api/: README.md  generate_api_project.py
gabarit/template_api/api_project/: .coveragerc  .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.svc  README.md  launch.sh  log_conf.json  makefile  pyproject.toml
gabarit/template_api/api_project/package_name/: __init__.py  application.py
gabarit/template_api/api_project/package_name/core/: __init__.py  config.py  event_handlers.py  logtools.py  resources.py
gabarit/template_api/api_project/package_name/model/: __init__.py  model_base.py  model_gabarit.py
gabarit/template_api/api_project/package_name/routers/: __init__.py  functional.py  technical.py
gabarit/template_api/api_project/package_name/routers/schemas/: functional.py  technical.py  utils.py
gabarit/template_api/api_project/tests/: __init__.py  conftest.py  create_test_model.py  test_config.py  test_model.py  test_routers_functionnal.py  test_routers_technical.py  test_schemas_functional.py  test_schemas_utils.py
gabarit/template_api/api_tests/: test_explain_route.py
gabarit/template_nlp/: default_config.ini  generate_nlp_project.py
gabarit/template_nlp/nlp_data/: .gitattributes  dataset_jvc.csv  mono_class_mono_label.csv  texts.csv
gabarit/template_nlp/nlp_project/: .gitignore  Makefile  requirements.txt  setup.py
gabarit/template_nlp/nlp_tests/: functional_tests.py  selenium_screenshot.py  selenium_tests.py  tests_setup.py
gabarit/template_num/: default_config.ini  generate_num_project.py
gabarit/template_num/num_data/: mono_class_mono_label.csv  test_fairness.csv
gabarit/template_num/num_project/: .gitignore  Makefile  README.md  requirements.txt  setup.py
gabarit/template_num/num_tests/: functional_tests.py  selenium_tests.py  tests_setup.py
gabarit/template_vision/: default_config.ini  generate_vision_project.py
gabarit/template_vision/vision_project/: .gitignore  Makefile  setup.py  (+1 more)
reference/template_api/: index.html
reference/template_nlp/: index.html
reference/template_num/: index.html
reference/template_vision/: index.html
search/: search_index.json
templates/template_nlp/: generate_nlp_project.py
templates/template_num/: generate_num_project.py
templates/template_vision/: default_model_upload_instructions.md  generate_vision_project.py
(+521 files in other folders)
